# fun_machine

./: .gitignore
neon-brick-breaker/: game.js  index.html  style.css
neon-tetris/: .clangd  .gitignore  CMakeLists.txt
neon-tetris/.cache/clangd/index/: Board.cpp.1C8C50C3FE03E6A4.idx  Board.hpp.22AB63491ABA987A.idx  Common.hpp.8710A695A6863301.idx  Game.cpp.D354F40ED2E5C1CD.idx  Game.hpp.BDBE8B09B26AF45C.idx  Input.cpp.4C45A7AFECE1AC07.idx  Input.hpp.34E4613F90F223A2.idx  Main.cpp.7732D02EB2CB3310.idx  Renderer.cpp.079816B78ADF4BB0.idx  Renderer.hpp.C8F89AD638CDF079.idx  Tetromino.cpp.02DC82ECE23DCB92.idx  Tetromino.hpp.085FEB7CD58BDEB0.idx  Timer.cpp.9C88C09EEA5D8A0D.idx  Timer.hpp.3729F93467A49ABC.idx
neon-tetris/doc/: build_system_notes.md
neon-tetris/include/: Board.hpp  Common.hpp  Game.hpp  Input.hpp  Renderer.hpp  Tetromino.hpp  Timer.hpp
neon-tetris/src/: Board.cpp  Game.cpp  Input.cpp  Main.cpp  Renderer.cpp  Tetromino.cpp  Timer.cpp
